fix chrome overlap issue

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3,3 +3,6 @@
     max-height:85vh;
     overflow-y: auto;
 }
+.container a {
+    word-break: break-all;
+}
